feat(dashboard): Add endpoints to get the layout and statuses
